changes made to boiler

--- a/src/boiler2.html
+++ b/src/boiler2.html
@@ -35,7 +35,7 @@
             <div class="bio animate__animated animate__shakeX">
                 <h2 class="bio-title">Hello!</h2>
                 <p class="bio-text">
-                  Nice to meet you!  I am a computer science major from Smithtown, NY.
+                  Hello! Nice to meet you!  I am a computer science major from Smithtown, NY.
                 </p>
               </div>
         </section>
