skills section added

--- a/src/boiler2.html
+++ b/src/boiler2.html
@@ -7,12 +7,12 @@
         <!-- adjusts width on device screen -->
         <meta name="viewport" content="width-device-width, initial-scale=1.0" />
         <!-- STYLES FOR CSS CODE -->
-        <link rel="stylesheet" href="styles2.css" />
+        <link rel="stylesheet" href="css/styles2.css" />
     </head>    
 
     <body>
         <header>
-            <h1>Luke Muratore</h1>
+            <h1>LUKE MURATORE</h1>
             <nav>
                 <ul class="nav__links">
                     <li><a href = "#about">About</a></li>
@@ -24,10 +24,10 @@
                 </ul>
             </nav>
         </header>
-
+        
         <section class="hero" id="about">
             <img
-            src="images/luke.jpg"
+            src="images/lukecircleimage.PNG"
             alt="Luke-Muratore"
             loading="lazy"
             class="hero-img"
@@ -38,6 +38,12 @@
                   Hello! Nice to meet you!  I am a computer science major from Smithtown, NY.
                 </p>
               </div>
+        </section>
+
+        <section class="skills" id="skills">
+            <h2 class="skill-header">Skills</h2>
+
+            <div
         </section>
     </body>
 </html>
