--- a/src/boiler2.html
+++ b/src/boiler2.html
@@ -20,9 +20,9 @@
                     <li><a href = "#programming-skills">Programming Skills</a></li>
                     <li><a href = "#software-skills">Software Skills</a></li>
                     <li><a href = "#job-experience">Job Experience</a></li>
-                    <li><a href = "#coursework">Coursework</a></li>
+                    <li><a href = "#organizations">Organizations</a></li>
                     <li><a href = "#projects">Projects</a></li>
-                    <li><a href = "#contact">Contact</a></li>
+                    <li><a href = "#socials">Get In Touch</a></li>
                 </ul>
             </nav>
         </header>
@@ -60,17 +60,7 @@
             </p>
           </section>
 
-        <section class="socials" id="socials">
-          <h2 class="socials-header">Socials</h2>
-          <li class="fa">
-            <a href="https://twitter.com/luke_Muratore" class="fa fa-twitter"></a>
-            <a href="https://www.linkedin.com/in/luke-muratore/" class="fa fa-linkedin"></a>
-            <a href="https://www.instagram.com/luke_muratore/" class="fa fa-instagram"></a>
-            <a href="https://www.snapchat.com/add/lukemuratore" class="fa fa-snapchat-ghost"></a>
-            <a href="https://github.com/lukeMuratore12" class="fa fa-github"></a>
-            <a href="https://open.spotify.com/user/ltm157m?si=dbe275a54f1446d4" class="fa fa-spotify"></a>
-          </li>
-        </section>
+        
 
         <section class="programming-skills" id="programming-skills">
             <h2 class="skill-header">Programming Skills</h2>
@@ -189,19 +179,195 @@
           <h2 class="je-header">Job Experience</h2>
           <article class="jobs">
             <article class = "job">
-              <h3>Teaching Assistant, <i>Organization of Programming Languages</i></h3>
-              <p>University of Maryland, College Park</p>
-              <p><i>January 2021-</i></p>
-              <ul>
-                <li>
-                  Interpret...
+              <img
+              src="icons/umdcslogo2.png"
+              alt=""
+              loading="lazy"
+              class="logo"
+              />
+              <h3>
+                <p style = "text-align:left;">
+                  Teaching Assistant, <i>Organization of Programming Languages</i>
+                </p>
+              </h3>
+              <p style = "text-align:left; font-size: 700;">
+                University of Maryland, College Park
+                <span style="float:right; font-size: 700;">
+                  <i>December 2021 - Present</i>
+                </span>
+              </p>
+              <p></p>
+              <ul style="padding-left: 40px; list-style-type: disc;">
+                <li style="margin-top: 1rem;">
+                  Explored Object-Oriented programming through Ruby, functional programming through OCaml, and memory-safe systems programming through Rust
                 </li>
-                <li>
-                  Help...
+                <li style="margin-top: .75rem;">
+                  Instructed weekly discussions that explored class topics such as scoping and binding, software security, higher-order programming, typing, and type polymorphism
+                </li>
+                <li style="margin-top: .75rem;">
+                  Held office hours to help reinforce class content and help students through projects in Ruby, OCaml, and Rust
+                </li>
+              </ul>
+            </article>
+            <article class="job">
+              <img
+              src="icons/CFClogo.png"
+              alt=""
+              loading="lazy"
+              class="logo"
+              />
+              <h3>
+                <p style = "text-align:left;">
+                  Assistant Estimator
+                </p>
+              </h3>
+              <p style = "text-align:left; font-size: 800;">
+                New York, New York
+                <span style="float:right; font-size: 800;">
+                  <i>May 2019 - January 2022</i>
+                </span>
+              </p>
+              <p></p>
+              <ul style="padding-left: 40px; list-style-type: disc;">
+                <li style="margin-top: 1rem;">
+                  Interpreted architectural AutoCAD drawings and determined material and labor requirements and costs for large scale floor covering projects
+                </li>
+                <li style="margin-top: .75rem;">
+                  Trained company veterans and interns to use online program rather than hand drawing for estimation purposes amidst the virtual environment set by the COVID-19 pandemic
+                </li>
+                <li style="margin-top: .75rem;">
+                  Experimented with estimation software and discovered new functionalities to improve estimation accuracy
                 </li>
               </ul>
             </article>
           </article>
+        </section>
+        <section class="organizations" id="organizations">
+          <h2 class="organization-header">Organizations</h2>
+          <article>
+            <article class="organization">
+              <img
+              src="icons/CFClogo.png"
+              alt=""
+              loading="lazy"
+              class="logo"
+              />
+              <h3>
+                <p>QUEST Honors Program</p>
+                <p style = "text-align:left;">
+                  Cohort 37 Student Representative - Curriculum Review Committee
+                  <span style="float:right; font-size: 800;">
+                    <i>August 2021-Present</i>
+                  </span>
+                </p>
+              </h3>
+              <p></p>
+              <ul style="padding-left: 40px; list-style-type: disc;">
+                <li style="margin-top: 1rem;">
+                  Crafted and scheduled unique team-building events on the student advisory board to improve program interest and participation in a challenging virtual environment
+                </li>
+                <li style="margin-top: .75rem;">
+                  Acted as a peer mentor to 8 new members and held social events and study sessions throughout their first year in the program
+                </li>
+                <li style="margin-top: .75rem;">
+                  Studied leadership patterns of leaders from Elon Musk to Jacinda Ardern and cultures in companies from Amazon to Zappos
+                </li>
+                <li style="margin-top: .75rem;">
+                  Completed various team simulations and the Iliad assessment, which built teamwork, communication, time-management, and leadership skills
+                </li>
+                <li style="margin-top: .75rem;">
+                  Awarded funniest final presentation in BSE's Enterprise Communications class, and awarded TA's favorite commercial in Introduction to Business Class
+                </li>
+              </ul>
+            </article>
+            <article class="organization">
+              <img
+              src="icons/CFClogo.png"
+              alt=""
+              loading="lazy"
+              class="logo"
+              />
+              <h3>
+                <p>Business, Society, and Economy(BSE) Scholars Program</p>
+                <p style = "text-align:left;">
+                  Engagement Chair and Peer Mentor
+                  <span style="float:right; font-size: 800;">
+                    <i>August 2020-Present</i>
+                  </span>
+                </p>
+              </h3>
+              <p></p>
+              <ul style="padding-left: 40px; list-style-type: disc;">
+                <li style="margin-top: 1rem;">
+                  Crafted and scheduled unique team-building events on the student advisory board to improve program interest and participation in a challenging virtual environment
+                </li>
+                <li style="margin-top: .75rem;">
+                  Acted as a peer mentor to 8 new members and held social events and study sessions throughout their first year in the program
+                </li>
+                <li style="margin-top: .75rem;">
+                  Studied leadership patterns of leaders from Elon Musk to Jacinda Ardern and cultures in companies from Amazon to Zappos
+                </li>
+                <li style="margin-top: .75rem;">
+                  Completed various team simulations and the Iliad assessment, which built teamwork, communication, time-management, and leadership skills
+                </li>
+                <li style="margin-top: .75rem;">
+                  Awarded funniest final presentation in BSE's Enterprise Communications class, and awarded TA's favorite commercial in Introduction to Business Class
+                </li>
+              </ul>
+            </article>
+            <article class="organization">
+              <img
+              src="icons/CFClogo.png"
+              alt=""
+              loading="lazy"
+              class="logo"
+              />
+              <h3>
+                <p>Sigma Phi Delta Professional-Social Engineering Fraternity</p>
+                <p style = "text-align:left;">
+                  Member
+                  <span style="float:right; font-size: 800;">
+                    <i>November 2021-Present</i>
+                  </span>
+                </p>
+              </h3>
+              <p></p>
+              <ul style="padding-left: 40px; list-style-type: disc;">
+                <li style="margin-top: 1rem;">
+                  Crafted and scheduled unique team-building events on the student advisory board to improve program interest and participation in a challenging virtual environment
+                </li>
+                <li style="margin-top: .75rem;">
+                  Acted as a peer mentor to 8 new members and held social events and study sessions throughout their first year in the program
+                </li>
+                <li style="margin-top: .75rem;">
+                  Studied leadership patterns of leaders from Elon Musk to Jacinda Ardern and cultures in companies from Amazon to Zappos
+                </li>
+                <li style="margin-top: .75rem;">
+                  Completed various team simulations and the Iliad assessment, which built teamwork, communication, time-management, and leadership skills
+                </li>
+                <li style="margin-top: .75rem;">
+                  Awarded funniest final presentation in BSE's Enterprise Communications class, and awarded TA's favorite commercial in Introduction to Business Class
+                </li>
+              </ul>
+            </article>
+          </article>
+        </section>
+
+        <section class="projects" id="projects">
+          <h2 class="projects-header">Personal Projects</h2>
+          <h3 class="projects-subheader">Technical/Programming Projects</h3>
+          <h3 class="projects-subheader">Consulting Projects</h3>
+        </section>
+        <section class="socials" id="socials">
+          <h2 class="socials-header">Get In Touch</h2>
+          <li class="fa">
+            <a href="https://twitter.com/luke_Muratore" class="fa fa-twitter"></a>
+            <a href="https://www.linkedin.com/in/luke-muratore/" class="fa fa-linkedin"></a>
+            <a href="https://www.instagram.com/luke_muratore/" class="fa fa-instagram"></a>
+            <a href="https://www.snapchat.com/add/lukemuratore" class="fa fa-snapchat-ghost"></a>
+            <a href="https://github.com/lukeMuratore12" class="fa fa-github"></a>
+            <a href="https://open.spotify.com/user/ltm157m?si=dbe275a54f1446d4" class="fa fa-spotify"></a>
+          </li>
         </section>
     </body>
 </html>
