--- a/src/boiler2.html
+++ b/src/boiler2.html
@@ -247,7 +247,7 @@
           <article>
             <article class="organization">
               <img
-              src="icons/CFClogo.png"
+              src="icons/questlogo.png"
               alt=""
               loading="lazy"
               class="logo"
@@ -282,7 +282,7 @@
             </article>
             <article class="organization">
               <img
-              src="icons/CFClogo.png"
+              src="icons/cpscholarslogo.png"
               alt=""
               loading="lazy"
               class="logo"
@@ -317,7 +317,7 @@
             </article>
             <article class="organization">
               <img
-              src="icons/CFClogo.png"
+              src="icons/sigphilogo.png"
               alt=""
               loading="lazy"
               class="logo"
