some initial changes>

--- a/index.html
+++ b/index.html
@@ -201,13 +201,13 @@
               <p></p>
               <ul style="padding-left: 40px; list-style-type: disc;">
                 <li style="margin-top: 1rem;">
-                  Explored Object-Oriented programming through Ruby, functional programming through OCaml, and memory-safe systems programming through Rust
+                    Guide weekly discussions of 30 students and hold office hours for up to 600 students to explore class topics such as scoping and binding, software security, higher-order programming, and type polymorphism
                 </li>
                 <li style="margin-top: .75rem;">
-                  Instructed weekly discussions that explored class topics such as scoping and binding, software security, higher-order programming, typing, and type polymorphism
+                    Explore object-oriented, functional, and memory-safe systems programming through lessons and projects in Ruby, OCaml, and Rust, respectively
                 </li>
                 <li style="margin-top: .75rem;">
-                  Held office hours to help reinforce class content and help students through projects in Ruby, OCaml, and Rust
+                    Design and grade coding exams and quizzes
                 </li>
               </ul>
             </article>
@@ -250,12 +250,14 @@
           <h2 class="organization-header">Organizations</h2>
           <article>
             <article class="organization">
+                <a href = "https://www.rhsmith.umd.edu/quest">
               <img
               src="icons/questlogo.png"
               alt=""
               loading="lazy"
               class="logo"
               />
+            </a>
               <h3>
                 <p>Quality Enhancement Systems and Teams (QUEST) Honors Program</p>
               </h3>
@@ -270,10 +272,18 @@
               <p></p>
               <ul style="padding-left: 40px; list-style-type: disc;">
                 <li style="margin-top: 1rem;">
+                    Multidisciplinary honors program focused on process improvement, data analysis, and systems design
                 </li>
                 <li style="margin-top: .75rem;">
+                    Selected by program representatives to provide a computer science perspective on course content
                 </li>
                 <li style="margin-top: .75rem;">
+                    Introduction to Design Project
+                    <ul>
+                        <li>
+                            Improved Recreation and Wellness Department’s data management by revising their process to include Qualtrics Workflows and Excel tools
+                        </li>
+                    </ul>
                 </li>
                 <li style="margin-top: .75rem;">
                 </li>
@@ -360,6 +370,7 @@
           <h3 class="projects-subheader">Consulting Projects</h3>
         </section>
         <section class="socials" id="socials">
+          <h2 class = "socials-header">Socials</h2>
           <li class="fa">
             <a href="https://twitter.com/luke_Muratore" class="fa fa-twitter"></a>
             <a href="https://www.linkedin.com/in/luke-muratore/" class="fa fa-linkedin"></a>
