project section added and other improvements

--- a/index.html
+++ b/index.html
@@ -278,26 +278,49 @@
                     Selected by program representatives to provide a computer science perspective on course content
                 </li>
                 <li style="margin-top: .75rem;">
-                    Introduction to Design Project
-                    <ul>
-                        <li>
-                            Improved Recreation and Wellness Department’s data management by revising their process to include Qualtrics Workflows and Excel tools
-                        </li>
-                    </ul>
-                </li>
-                <li style="margin-top: .75rem;">
-                </li>
-                <li style="margin-top: .75rem;">
+                    Completed multiple team consulting projects with real organizations focused on design thinking and data science (featured in the <a href = "#projects">project section</a>)
                 </li>
               </ul>
             </article>
             <article class="organization">
+                <a href = "https://umd.hack4impact.org/">
+              <img
+              src="icons/questlogo.png"
+              alt=""
+              loading="lazy"
+              class="logo"
+              />
+            </a>
+              <h3>
+                <p>Hack4Impact</p>
+              </h3>
+              <h4>
+                <p style = "text-align:left;">
+                  Software Engineer
+                  <span style="float:right;">
+                    <i>January 2022-Present</i>
+                  </span>
+                </p>
+              </h4>
+              <p></p>
+              <ul style="padding-left: 40px; list-style-type: disc;">
+                <li style="margin-top: 1rem;">
+                    Built website using React & Typescript to automate mentor training process for local non-profit organization Y-KNOT, Inc.
+                </li>
+                <li style="margin-top: .75rem;">
+                    Utilized agile development and pair programming to work with the tech leads and software engineers
+                </li>
+              </ul>
+            </article>
+            <article class="organization">
+                <a href = "https://scholars.umd.edu/programs/business-society-and-economy">
               <img
               src="icons/cpscholarslogo.png"
               alt=""
               loading="lazy"
               class="logo"
               />
+            </a>
               <h3>
                 <p>Business, Society, and Economy (BSE) Scholars Program</p>
               </h3>
@@ -318,29 +341,28 @@
                   Acted as a peer mentor to 8 new members and held social events and study sessions throughout their first year in the program
                 </li>
                 <li style="margin-top: .75rem;">
-                  Studied leadership patterns of leaders from Elon Musk to Jacinda Ardern and cultures in companies from Amazon to Zappos
-                </li>
-                <li style="margin-top: .75rem;">
-                  Completed various team simulations and the Iliad assessment, which built teamwork, communication, time-management, and leadership skills
-                </li>
-                <li style="margin-top: .75rem;">
                   Awarded funniest final presentation in BSE's Enterprise Communications class, and awarded TA's favorite commercial in Introduction to Business Class
+                </li>
+                <li style="margin-top: .75rem;">
+                  Studied leadership patterns of leaders from Elon Musk to Jacinda Ardern and cultures in companies from Amazon to Zappos
                 </li>
               </ul>
             </article>
             <article class="organization">
+                <a href = "http://beta-iota.sigmaphidelta.org/">
               <img
               src="icons/sigphilogo.png"
               alt=""
               loading="lazy"
               class="logo"
               />
+            </a>
               <h3>
                 <p>Sigma Phi Delta Professional-Social Engineering Fraternity</p>
               </h3>
               <h4>
                 <p style = "text-align:left;">
-                  Member
+                  Health and Wellness Chair (Spring 2022 Semester)
                   <span style="float:right; font-size: 800;">
                     <i>November 2021-Present</i>
                   </span>
@@ -349,15 +371,13 @@
               <p></p>
               <ul style="padding-left: 40px; list-style-type: disc;">
                 <li style="margin-top: 1rem;">
+                    Coordinated with the UMD Counseling Center to set up wellness workshops focused on "Coping With Stress"
                 </li>
                 <li style="margin-top: .75rem;">
+                    Maintained list of available mental health resources for members
                 </li>
                 <li style="margin-top: .75rem;">
-                </li>
-                <li style="margin-top: .75rem;">
-                </li>
-                <li style="margin-top: .75rem;">
-                  Awarded funniest final presentation in BSE's Enterprise Communications class, and awarded TA's favorite commercial in Introduction to Business Class
+                    Provided advice and resources to members who have reached out
                 </li>
               </ul>
             </article>
@@ -367,7 +387,129 @@
         <section class="projects" id="projects">
           <h2 class="projects-header">Personal Projects</h2>
           <h3 class="projects-subheader">Technical/Programming Projects</h3>
+            <article class = "projects-art">
+                <article class = "project">
+                    <a href = "https://terpconnect.umd.edu/~ruttamsi/">
+                  <img
+                  src="icons/cpscholarslogo.png"
+                  alt=""
+                  loading="lazy"
+                  class="logo"
+                  />
+                </a>
+                  <h3>
+                    <p>Shortest Path To Success - Data Science Final Project</p>
+                  </h3>
+                  <h4>
+                    <p style = "text-align:left;">
+                      Python, Pandas, Jupyter Notebook, Docker
+                      <span style="float:right; font-size: 800;">
+                        <i>May 2022</i>
+                      </span>
+                    </p>
+                  </h4>
+                  <p></p>
+                  <ul style="padding-left: 40px; list-style-type: disc;">
+                    <li style="margin-top: .75rem;">
+                        Researched and found StackOverflow Developer Survey dataset containing 800,000+ observations of developer information
+                    </li>
+                    <li style="margin-top: .75rem;">
+                        Developed tutorial demonstrating parts of the data science pipeline, such as data wrangling, data cleanup, data tidying, data visualization, hypothesis testing, and analysis
+                    </li>
+                    <li style="margin-top: .75rem;">
+                        Hypothesized that developers who used less popular languages had better financial success on average and developed linear regression model to support this hypothesis
+                    </li>
+                  </ul>
+            </article>
+                <article class = "project">
+                        <a href = "https://github.com/lukeMuratore12/COVID-19-R-Project">
+                      <img
+                      src="icons/cpscholarslogo.png"
+                      alt=""
+                      loading="lazy"
+                      class="logo"
+                      />
+                    </a>
+                      <h3>
+                        <p>COVID-19 and Obesity Data Analysis Project</p>
+                      </h3>
+                      <h4>
+                        <p style = "text-align:left;">
+                          R, RStudio, Excel
+                          <span style="float:right; font-size: 800;">
+                            <i>May 2021</i>
+                          </span>
+                        </p>
+                      </h4>
+                      <p></p>
+                      <ul style="padding-left: 40px; list-style-type: disc;">
+                        <li style="margin-top: .75rem;">
+                            Integrated R and JHU Datasets to investigate the correlation between obesity and death due to COVID-19                        </li>
+                        <li style="margin-top: .75rem;">
+                            Measured obesity rates and population densities across the U.S. to collect an unbiased sample set
+                        </li>
+                      </ul>
+                </article>
+            </article>
           <h3 class="projects-subheader">Consulting Projects</h3>
+          <article class = "projects-art">
+            <article class = "project">
+              <img
+              src="icons/cpscholarslogo.png"
+              alt=""
+              loading="lazy"
+              class="logo"
+              />
+              <h3>
+                <p>e.fundamentals Ticket Classification Improvement</p>
+              </h3>
+              <h4>
+                <p style = "text-align:left;">
+                  Python, Pandas, Excel, Agile Development
+                  <span style="float:right; font-size: 800;">
+                    <i>January 2022-May 2022</i>
+                  </span>
+                </p>
+              </h4>
+              <p></p>
+              <ul style="padding-left: 40px; list-style-type: disc;">
+                <li style="margin-top: .75rem;">
+                    Used Python and Excel data to classify and cluster tickets and improve ticket routing for 7 different project types for the e-commerce analytics software company, e.fundamentals
+                 </li>
+                <li style="margin-top: .75rem;">
+                    Discovered retailers who most frequently suffered from service issues and analyzed the Service-Level Agreement Compliance with these companies
+                </li>
+                <li style="margin-top: .75rem;">
+                    Developed prototype natural language processing model to route tickets into project types with around 40% accuracy
+                </li>
+              </ul>
+        </article>
+        <article class = "project">
+            <img
+            src="icons/cpscholarslogo.png"
+            alt=""
+            loading="lazy"
+            class="logo"
+            />
+            <h3>
+              <p>RecWell Data Management Process Improvement Project</p>
+            </h3>
+            <h4>
+              <p style = "text-align:left;">
+                Excel, Qualtrics, Agile Development
+                <span style="float:right; font-size: 800;">
+                  <i>October 2021-December 2021</i>
+                </span>
+              </p>
+            </h4>
+            <p></p>
+            <ul style="padding-left: 40px; list-style-type: disc;">
+              <li style="margin-top: .75rem;">
+                Improved Recreation and Wellness Department’s client data management by revising their process to include Qualtrics Workflows and Excel tools, effectively automating the client intake process
+               </li>
+            </ul>
+      </article>
+          </article>
         </section>
         <section class="socials" id="socials">
           <h2 class = "socials-header">Socials</h2>
