changed project section css

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
         <section class="projects" id="projects">
           <h2 class="projects-header">Personal Projects</h2>
           <h3 class="projects-subheader">Technical/Programming Projects</h3>
-            <article class = "projects-art">
+            <article>
                 <article class = "project">
                     <a href = "https://terpconnect.umd.edu/~ruttamsi/">
                   <img
@@ -452,7 +452,7 @@
                 </article>
             </article>
           <h3 class="projects-subheader">Consulting Projects</h3>
-          <article class = "projects-art">
+          <article>
             <article class = "project">
               <img
               src="icons/cpscholarslogo.png"
