--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <article class="organization">
                 <a href = "https://umd.hack4impact.org/">
               <img
-              src="icons/questlogo.png"
+              src="icons/h4i.png"
               alt=""
               loading="lazy"
               class="logo"
@@ -389,7 +389,7 @@
             <article>
                 <article class = "project">
                     <img
-                    src="icons/e.fundmentals logo.png"
+                    src="icons/e.fundamentals logo.png"
                     alt=""
                     loading="lazy"
                     class="logo"
